--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "parcel": "^2.11.0",
     "parcel-reporter-static-files-copy": "^1.5.3"
   },
-  "dependencies": {}
+  "dependencies": {},
+  "engines": {
+    "node": ">=20.0.0"
+  }
 }
